# aaa-citation-auditor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
aaa_db/: __init__.py  models.py  repository.py  session.py  telemetry_repository.py
alembic/: env.py
alembic/versions/: 26d9c10ac00a_baseline_schema.py  692bad634655_add_derived_count_to_audit_runs_and_.py  a6175d945c95_add_statute_count_to_audit_runs_and_.py  a88a291f2ec9_add_contact_messages_table.py  b1c2d3e4f5a6_add_disambiguation_columns_and_cache_table.py  c2d3e4f5a6b7_add_app_settings_table.py  d3e4f5a6b7c8_add_statute_verified.py  e4f5a6b7c8d9_add_memo_json_to_audit_runs.py  f5a6b7c8d9e0_add_local_citation_index.py  g6b7c8d9e0f1_add_users_table.py  (+7 more)
app/: __init__.py  main.py  settings.py
docs/: CHANGELOG.md  USER_GUIDE.md  notifications-inventory-20260423.md
scripts/: import_bulk_data.py  reverify_user_resolutions.py  update_bulk_data.py
tests/: conftest.py  test_app.py  test_auth.py  test_cache_trust_tiers.py  test_cap_verification.py  test_citation_context.py  test_citation_refinements.py  test_expand_cache.py  test_federal_statute_verification.py  test_local_index.py  test_name_matching.py  test_not_found_improvements.py  test_notifications.py  test_parallel_citation.py  test_provenance.py  test_rate_limiting.py  test_supra_resolution.py  test_trust_fixes.py  test_usc_no_symbol.py  test_virginia_detection.py  test_virginia_statute_verification.py
(+40 files in other folders)
